{
    "name": "InputActions",
    "maps": [
        {
            "name": "CharacterMovement",
            "id": "81778d4f-b888-4a7b-9fd1-11069935ae05",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "205ba3f6-2ec9-4e9b-830e-a6f2ac167961",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "63631404-2bbe-4f8c-ab22-9a2654c3ab62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JumpHeld",
                    "type": "PassThrough",
                    "id": "71cef123-3603-47f4-bd7a-1d40e1650b3e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis AD",
                    "id": "5b420ebf-039c-4429-a23d-ce94518d79c1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1c3e9f2a-6e09-4139-acd0-ab3cceb39b45",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "81050e2a-b367-45b8-8e21-a77a04475d44",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8858cedd-0b34-45f5-8780-87cdfce521a3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85183b74-e3c8-410a-bcfb-e8f2c6b7d01d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHeld",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CharacterActions",
            "id": "b616b690-7097-4d22-ba43-0e6e6c5ac748",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f54b5425-886b-4525-8246-08b128bb84d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "516dc194-e5d4-4d75-9ecd-323d8d4dba45",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}